--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "add-two-numberss",
+  "name": "@add-two-numberss",
   "version": "1.0.1",
   "description": "add-two-numberss",
   "main": "index.js",
